--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "dependencies": {
     "@cyclic.sh/dynamodb": "^0.0.33",
     "env-cmd": "^10.1.0",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "fix-esm": "^1.0.1",
+    "google-auth-library": "^9.2.0",
+    "google-spreadsheet": "^4.1.1"
   }
 }
