--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "env-cmd nodemon index.js",
+    "dev": "env-cmd nodemon index.js -e js,hbs,html",
     "repl": "env-cmd node"
   },
   "keywords": [],
@@ -16,9 +16,10 @@
   "dependencies": {
     "@cyclic.sh/dynamodb": "^0.0.33",
     "env-cmd": "^10.1.0",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "fix-esm": "^1.0.1",
     "google-auth-library": "^9.2.0",
-    "google-spreadsheet": "^4.1.1"
+    "google-spreadsheet": "^4.1.1",
+    "hbs": "^4.2.0"
   }
 }
